fix: gap footer

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -654,4 +654,8 @@
     height: 55px;
     font-size: 1.6rem;
   }
+
+  .header-nav {
+    gap: 20px;
+  }
 }
